# turbo-pancake

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
migrations/: 20250908161507_create_users_table.sql  20250909194629_update_guild.sql  20250909200910_rename_guild_notify_everyone.sql  20250909203552_update_guild_logs.sql  20250909214521_update_messages_table.sql  20250909234232_use_ints_for_colors.sql  20250910144646_rename_user_status_enums_lowercase.sql  20250911190649_update_user_status_default.sql  20250911234808_change_default_notifications_user.sql  20250929162723_add_new_login_challenges_table.sql
src/: errors.rs  extractors.rs  lib.rs  main.rs  state.rs
src/auth/: emails.rs  jwt.rs  mod.rs  recovery_codes.rs  snowflake.rs  types.rs
src/handlers/: auth.rs  mod.rs  protected.rs
src/models/: blocked.rs  channel.rs  channel_recipient.rs  emoji.rs  friend.rs  guild.rs  guild_ban.rs  guild_log.rs  guild_member.rs  invite.rs  message.rs  message_mention.rs  message_reaction.rs  mod.rs  request.rs  role.rs  token.rs  user.rs
src/types/: mod.rs  token_dtos.rs  user_dtos.rs
