[package]
name = "turbo-pancake"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "ws"] }
serde = { version = "1.0.219", features = ["default", "derive"] }
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "macros", "ipnet"] }
tracing-subscriber = { version = "0.3.20", features = ["std", "env-filter", "fmt"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["timeout", "trace"] }
rs-snowflake = "0.6.0"
jsonwebtoken = "9.3.1"
serde_json = "1.0.143"
tracing = "0.1.41"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
bcrypt = "0.17.1"
base64-url = "3.0.0"
thiserror = "2.0.16"
once_cell = "1.21.3"
headers = "0.4.1"
uuid = { version = "1.18.1", features = ["v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
sha1 = "0.10.6"
reqwest = { version = "0.12.23", features = ["zstd", "brotli", "json", "multipart", "cookies", "gzip"] }
zxcvbn = "3.1.0"
notify-rust = "4.11.7"
validator = { version = "0.20.0", features = ["derive"] }
totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
rand = "0.9.2"
serde_str = "0.1.0"
axum-macros = "0.5.0"
regex = "1.11.3"
resend-rs = "0.18.0"


[lib]
name = "turbo"
path = "src/lib.rs"
